--- a/vignettes/GXwasR_PRS.Rmd
+++ b/vignettes/GXwasR_PRS.Rmd
@@ -13,7 +13,7 @@ output:
     toc_float: true
     toc_depth: 2
     code_folding: show
-date: "4 August 2025"
+date: "5 August 2025"
 package: "GXwasR 0.99.0"
 vignette: >
   %\VignetteIndexEntry{GXwasR_PRS}
@@ -85,20 +85,52 @@ pheno_type <- "binary"
 ldclump <- FALSE
 pheno_type <- "binary"
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc4116ff9158', reason 'Directory not empty'
-#> An error occurred: attempt to set 'colnames' on an object with less than two dimensions
-#> Error in ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, : object 'pheno.prs' not found
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> ℹ 0.001
+#> • Computing PRS for threshold 0.001
+#> ℹ 0.05
+#> • Computing PRS for threshold 0.05
+#> ℹ 0.1
+#> • Computing PRS for threshold 0.1
+#> ℹ 0.2
+#> • Computing PRS for threshold 0.2
+#> ℹ 0.3
+#> • Computing PRS for threshold 0.3
+#> ℹ 0.4
+#> • Computing PRS for threshold 0.4
+#> ℹ 0.5
+#> • Computing PRS for threshold 0.5
+PRSresult$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+```
 
+
+``` r
 ## This table shows 10 samples with phenotype, covariates and a PRS column.
 PRS <- PRSresult$PRS
-#> Error: object 'PRSresult' not found
 PRS[1:10, ]
-#> Error: object 'PRS' not found
+```
+
+
+
+|FID     |IID     | Pheno1| AGE| testcovar|       PC1|        PC2|        PC3|        PC4|        PC5|        PC6|     SCORE|
+|:-------|:-------|------:|---:|---------:|---------:|----------:|----------:|----------:|----------:|----------:|---------:|
+|EUR_FIN |HG00171 |      1|  36|         1| 0.0964618| -0.0382514|  0.0090380| -0.0895293| -0.0252291|  0.0146543| 0.0484212|
+|EUR_FIN |HG00173 |      1|  81|         1| 0.0743932| -0.0567271|  0.0396994|  0.0205343|  0.0230410| -0.0360380| 0.0293742|
+|EUR_FIN |HG00174 |      1|  83|         1| 0.0645349| -0.0561035| -0.0145786| -0.0264343| -0.0018095|  0.0144521| 0.0099674|
+|EUR_FIN |HG00176 |      2|  75|         0| 0.0832472| -0.0560208|  0.0302654| -0.0011077| -0.0530371| -0.0335803| 0.1042060|
+|EUR_FIN |HG00177 |      1|  88|         1| 0.0775687| -0.0094644|  0.0451785| -0.0373215| -0.0617431| -0.0719951| 0.0314303|
+|EUR_FIN |HG00178 |      1|  24|         1| 0.0661714| -0.0504906|  0.0248539| -0.0828066|  0.0409418|  0.0055953| 0.0722689|
+|EUR_FIN |HG00179 |      2|  78|         1| 0.0806110| -0.0115409| -0.0075072| -0.0328823|  0.0355973|  0.0424512| 0.1165240|
+|EUR_FIN |HG00180 |      1|  39|         1| 0.0840638|  0.0011783|  0.0128646|  0.0591540|  0.0547667| -0.0101595| 0.0617159|
+|EUR_FIN |HG00182 |      1|  50|         1| 0.1029760| -0.0430046|  0.0199971| -0.0302365| -0.0901911| -0.0378515| 0.0283703|
+|EUR_FIN |HG00183 |      1|  58|         0| 0.0827103| -0.0386530|  0.0509366| -0.0015378| -0.1045610|  0.0623634| 0.0386297|
+
+``` r
 ## The best threshold
 BestPvalue <- PRSresult$BestP$Threshold
-#> Error: object 'PRSresult' not found
 BestPvalue
-#> Error: object 'BestPvalue' not found
+#> [1] 0.05
 ```
 
 # Computing sex-aware PRS
@@ -210,7 +242,7 @@ finput <- "filtered_step1"
 foutput <- "NewtargetData"
 FilterSNP(DataDir, ResultDir, finput, foutput, SNPvec, extract = TRUE)
 #> ℹ 991 SNPs are extracted
-#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp0uzDD3 prefixed as NewtargetData
+#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez prefixed as NewtargetData
 #> NULL
 ```
 
@@ -255,20 +287,52 @@ pheno_type <- "binary"
 effectsize <- "BETA"
 ldclump <- FALSE
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc4116ff9158', reason 'Directory not empty'
-#> An error occurred: attempt to set 'colnames' on an object with less than two dimensions
-#> Error in ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, : object 'pheno.prs' not found
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> ℹ 0.001
+#> • Computing PRS for threshold 0.001
+#> ℹ 0.05
+#> • Computing PRS for threshold 0.05
+#> ℹ 0.1
+#> • Computing PRS for threshold 0.1
+#> ℹ 0.2
+#> • Computing PRS for threshold 0.2
+#> ℹ 0.3
+#> • Computing PRS for threshold 0.3
+#> ℹ 0.4
+#> • Computing PRS for threshold 0.4
+#> ℹ 0.5
+#> • Computing PRS for threshold 0.5
+PRSresult$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+```
 
+
+``` r
 ## This table shows 10 samples with phenotype, covariates and a PRS column.
 PRS <- PRSresult$PRS
-#> Error: object 'PRSresult' not found
 PRS[1:10, ]
-#> Error: object 'PRS' not found
+```
+
+
+
+|FID     |IID     | Pheno1| AGE| testcovar|        PC1|        PC2|        PC3|        PC4|        PC5|        PC6|      SCORE|
+|:-------|:-------|------:|---:|---------:|----------:|----------:|----------:|----------:|----------:|----------:|----------:|
+|EUR_FIN |HG00171 |      1|  36|         1|  0.0816192|  0.0088405|  0.0457488| -0.0458072|  0.0361127| -0.0444544|  0.0446702|
+|EUR_FIN |HG00173 |      1|  81|         1|  0.0783950|  0.0793499| -0.0203422|  0.0507417|  0.0060022|  0.0682457|  0.0227245|
+|EUR_FIN |HG00174 |      1|  83|         1|  0.0417082| -0.0182760| -0.0141222| -0.0796694| -0.1079240|  0.0417553| -0.0021202|
+|EUR_FIN |HG00176 |      2|  75|         0|  0.0330363| -0.0687181|  0.0420013|  0.0035531| -0.0326060|  0.0546183|  0.1291310|
+|EUR_FIN |HG00177 |      1|  88|         1|  0.1078350|  0.0402309| -0.0575659|  0.0204330| -0.0190359| -0.1153630|  0.0456979|
+|EUR_FIN |HG00178 |      1|  24|         1|  0.0446610| -0.0178283| -0.0541228| -0.1293990|  0.0191170|  0.0419359|  0.0974915|
+|EUR_FIN |HG00179 |      2|  78|         1| -0.0079884|  0.0495156| -0.0417300| -0.0908318| -0.1013690| -0.0286235|  0.1043860|
+|EUR_FIN |HG00180 |      1|  39|         1| -0.0643263| -0.0789866| -0.0961588| -0.0117982|  0.0919479| -0.0083767|  0.0943266|
+|EUR_FIN |HG00182 |      1|  50|         1|  0.0477393|  0.0258317|  0.1084700| -0.0102109| -0.0949523|  0.0224777|  0.0248974|
+|EUR_FIN |HG00183 |      1|  58|         0|  0.0181373| -0.0707456|  0.0252158| -0.0319165| -0.0351717| -0.0521393|  0.0521662|
+
+``` r
 ## The best threshold
 BestPvalue <- PRSresult$BestP$Threshold
-#> Error: object 'PRSresult' not found
 BestPvalue
-#> Error: object 'BestPvalue' not found
+#> [1] 0.05
 ```
 
 **(D) Perform regression to test the association of PRS and sex.**
@@ -298,23 +362,16 @@ library(GXwasR)
 famfile <- read.table(paste0(ResultDir, "/NewtargetData.fam"))[, c(1, 2, 5)]
 colnames(famfile) <- c("FID", "IID", "Sex")
 prefdata <- merge(famfile, PRS, by = c("IID", "FID"))
-#> Error: object 'PRS' not found
 
 fdata <- prefdata[, c(13, 3:12)]
-#> Error: object 'prefdata' not found
 fdata$Sex <- as.factor(as.character(fdata$Sex))
-#> Error: object 'fdata' not found
 response_index <- 1
 regressor_index <- 2
 
 x <- SexRegress(fdata, regressor_index, response_index)
-#> Error: object 'fdata' not found
 x
-#> $MonomorSNPs
-#> NULL
-#> 
-#> $DiffMissSNPs
-#> NULL
+#>     Estimate   Std. Error      t value     Pr(>|t|) 
+#> -0.005453123  0.005495108 -0.992359622  0.321927372
 ```
 
 In this case, the association between PRS and sex seems insignificant. Users can check with different thresholds of PRS as mentioned in step (D).
@@ -339,12 +396,12 @@ finput <- "NewtargetData"
 foutput <- "maletarget"
 sex <- "males"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp0uzDD3
+#> ✔ Output plink files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
 
 foutput <- "femaletarget"
 sex <- "females"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp0uzDD3
+#> ✔ Output plink files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
 ```
 
 **(C) Perform LD clumping separately in both discovery data.**
@@ -397,20 +454,52 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultFemale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc4116ff9158', reason 'Directory not empty'
-#> An error occurred: attempt to set 'colnames' on an object with less than two dimensions
-#> Error in ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, : object 'pheno.prs' not found
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> ℹ 0.001
+#> • Computing PRS for threshold 0.001
+#> ℹ 0.05
+#> • Computing PRS for threshold 0.05
+#> ℹ 0.1
+#> • Computing PRS for threshold 0.1
+#> ℹ 0.2
+#> • Computing PRS for threshold 0.2
+#> ℹ 0.3
+#> • Computing PRS for threshold 0.3
+#> ℹ 0.4
+#> • Computing PRS for threshold 0.4
+#> ℹ 0.5
+#> • Computing PRS for threshold 0.5
+PRSresultFemale$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+```
 
+
+``` r
 ## This table shows 10 samples with phenotype, covariates and a PRS column.
 PRSfemale <- PRSresultFemale$PRS
-#> Error: object 'PRSresultFemale' not found
 PRSfemale[1:10, ]
-#> Error: object 'PRSfemale' not found
+```
+
+
+
+|FID     |IID     | Pheno1| Sex| AGE| testcovar|        PC1|        PC2|        PC3|        PC4|        PC5|        PC6|     SCORE|
+|:-------|:-------|------:|---:|---:|---------:|----------:|----------:|----------:|----------:|----------:|----------:|---------:|
+|EUR_FIN |HG00171 |      1|   2|  36|         1|  0.0358056| -0.0103993|  0.0304770|  0.0804331| -0.0316828|  0.2308030| -0.975333|
+|EUR_FIN |HG00173 |      1|   2|  81|         1| -0.0259195|  0.0522046|  0.0338950| -0.0783466| -0.0301168|  0.0481648| -0.327300|
+|EUR_FIN |HG00174 |      1|   2|  83|         1|  0.0690632|  0.1000850|  0.0177107| -0.0062435|  0.2347970| -0.1600570| -0.975333|
+|EUR_FIN |HG00176 |      2|   2|  75|         0|  0.0464837| -0.0611293| -0.0300357| -0.1261310|  0.0221893| -0.0430133|  0.320733|
+|EUR_FIN |HG00177 |      1|   2|  88|         1|  0.0175615| -0.0407396| -0.1278730|  0.1634300|  0.1062830|  0.0622563| -0.975333|
+|EUR_FIN |HG00178 |      1|   2|  24|         1|  0.1526140|  0.1886470| -0.0341148| -0.0824660| -0.0736962| -0.0412650|  0.320733|
+|EUR_FIN |HG00179 |      2|   2|  78|         1|  0.0881766|  0.0494024|  0.1288620|  0.0523562| -0.0191810|  0.0078241| -0.327300|
+|EUR_FIN |HG00180 |      1|   2|  39|         1|  0.0459778|  0.0170708|  0.0761808| -0.0344214| -0.0240829|  0.0729217| -0.327300|
+|EUR_FIN |HG00266 |      2|   2|  64|         1|  0.0238295| -0.0127790| -0.1954810| -0.0758269| -0.0017235|  0.0638968|  0.320733|
+|EUR_FIN |HG00268 |      1|   2|  66|         1| -0.1570560| -0.0401398|  0.1022290|  0.0203453| -0.0103913|  0.0914439| -0.327300|
+
+``` r
 ## The best threshold
 BestPvalue <- PRSresultFemale$BestP$Threshold
-#> Error: object 'PRSresultFemale' not found
 BestPvalue
-#> Error: object 'BestPvalue' not found
+#> [1] 0.001
 ```
 
 # Computing PRS for male-only target data using female-only discovery data
@@ -448,20 +537,52 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultmale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1 = clump_p1, clump_p2 = clump_p2, clump_r2 = clump_r2, clump_kb = clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc4116ff9158', reason 'Directory not empty'
-#> An error occurred: attempt to set 'colnames' on an object with less than two dimensions
-#> Error in ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, : object 'pheno.prs' not found
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> ℹ 0.001
+#> • Computing PRS for threshold 0.001
+#> ℹ 0.05
+#> • Computing PRS for threshold 0.05
+#> ℹ 0.1
+#> • Computing PRS for threshold 0.1
+#> ℹ 0.2
+#> • Computing PRS for threshold 0.2
+#> ℹ 0.3
+#> • Computing PRS for threshold 0.3
+#> ℹ 0.4
+#> • Computing PRS for threshold 0.4
+#> ℹ 0.5
+#> • Computing PRS for threshold 0.5
+PRSresultmale$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+```
 
+
+``` r
 ## This table shows 10 samples with phenotype, covariates and a PRS column.
 PRSmale <- PRSresultmale$PRS
-#> Error: object 'PRSresultmale' not found
 PRSmale[1:10, ]
-#> Error: object 'PRSmale' not found
+```
+
+
+
+|FID     |IID     | Pheno1| Sex| AGE| testcovar|        PC1|        PC2|        PC3|        PC4|        PC5|        PC6|      SCORE|
+|:-------|:-------|------:|---:|---:|---------:|----------:|----------:|----------:|----------:|----------:|----------:|----------:|
+|EUR_FIN |HG00182 |      1|   1|  50|         1|  0.0647406| -0.0928744| -0.0671189|  0.1612960|  0.0577821| -0.0080738| -0.7348330|
+|EUR_FIN |HG00183 |      1|   1|  58|         0| -0.1385060| -0.0695656| -0.0741905| -0.0772780|  0.0448000|  0.0203577| -0.0018333|
+|EUR_FIN |HG00185 |      2|   1|  22|         1| -0.0149102| -0.1042650| -0.0490031|  0.0909954| -0.1272400|  0.0736424| -0.0018333|
+|EUR_FIN |HG00186 |      2|   1|  52|         0|  0.0936989| -0.0658094| -0.1384690|  0.0711780| -0.1307370| -0.2262310|  0.0000000|
+|EUR_FIN |HG00187 |      2|   1|  49|         1| -0.0495608| -0.0536840| -0.0351695|  0.0991132|  0.0429508|  0.1034500|  0.4873330|
+|EUR_FIN |HG00188 |      1|   1|  47|         1| -0.0168334| -0.0884520| -0.0100132|  0.0212827|  0.0980303|  0.0024415| -0.4883330|
+|EUR_FIN |HG00189 |      1|   1|  27|         1|  0.0926677| -0.0486674| -0.0237400|  0.0180525| -0.0864605| -0.0121730| -0.7348330|
+|EUR_FIN |HG00190 |      2|   1|  42|         0|  0.1214390|  0.1955690|  0.0718894|  0.0852533|  0.0009986| -0.0935724| -0.7348330|
+|EUR_FIN |HG00267 |      2|   1|  36|         1|  0.0838363| -0.1059630| -0.0289262| -0.0295922|  0.0224057| -0.1815780| -0.7348330|
+|EUR_FIN |HG00271 |      2|   1|  51|         1|  0.0015542| -0.0608128|  0.0592212| -0.0144662| -0.0084652| -0.2149010|  0.2408330|
+
+``` r
 ## The best threshold
 BestPvalue <- PRSresultmale$BestP$Threshold
-#> Error: object 'PRSresultmale' not found
 BestPvalue
-#> Error: object 'BestPvalue' not found
+#> [1] 0.001
 ```
 
 **(F) Perform regression to test the association of PRS for a trait in one sex and case status in other sex.**
@@ -476,19 +597,16 @@ Let's check the association between PRS and trait in female.
 famfile <- read.table(paste0(ResultDir, "/femaletarget.fam"))[, c(1, 2, 6)]
 colnames(famfile) <- c("FID", "IID", "Trait")
 prefdata <- merge(famfile, PRS, by = c("IID", "FID"))
-#> Error: object 'PRS' not found
 
 fdata <- prefdata[, c(13, 3:12)]
-#> Error: object 'prefdata' not found
 fdata$Sex <- as.factor(as.character(fdata$Trait))
-#> Error: object 'fdata' not found
 response_index <- 1
 regressor_index <- 2
 
 x <- SexRegress(fdata, regressor_index, response_index)
-#> Error: object 'fdata' not found
 x
-#> NULL
+#>     Estimate   Std. Error      t value     Pr(>|t|) 
+#> 4.942281e-02 6.939184e-03 7.122280e+00 4.988950e-11
 # In this case, there is a significant association between PRS and trait value.
 ```
 
@@ -546,14 +664,13 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  collate  en_US.UTF-8
 #>  ctype    en_US.UTF-8
 #>  tz       America/New_York
-#>  date     2025-08-04
+#>  date     2025-08-05
 #>  pandoc   3.6.3 @ /Applications/Positron.app/Contents/Resources/app/quarto/bin/tools/aarch64/ (via rmarkdown)
 #>  quarto   1.7.32 @ /usr/local/bin/quarto
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────
 #>  ! package              * version    date (UTC) lib source
 #>    abind                  1.4-8      2024-09-12 [2] CRAN (R 4.5.0)
-#>    askpass                1.2.1      2024-10-04 [2] CRAN (R 4.5.0)
 #>    backports              1.5.0      2024-05-23 [2] CRAN (R 4.5.1)
 #>    bibtex                 0.5.1      2023-01-26 [2] CRAN (R 4.5.0)
 #>    bigassertr             0.1.7      2025-06-27 [2] CRAN (R 4.5.1)
@@ -567,7 +684,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
 #>    BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
 #>    BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
-#>    biocthis               1.18.0     2025-04-15 [2] Bioconduc~
 #>    Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
 #>    bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
 #>    bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
@@ -585,7 +701,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    commonmark             2.0.0      2025-07-07 [2] CRAN (R 4.5.1)
 #>    cowplot                1.2.0      2025-07-07 [2] CRAN (R 4.5.1)
 #>    crayon                 1.5.3      2024-06-20 [2] CRAN (R 4.5.0)
-#>    credentials            2.0.2      2024-10-04 [2] CRAN (R 4.5.0)
 #>    curl                   6.4.0      2025-06-22 [2] CRAN (R 4.5.1)
 #>    data.table             1.17.8     2025-07-10 [2] CRAN (R 4.5.1)
 #>    DelayedArray           0.34.1     2025-04-17 [2] Bioconduc~
@@ -609,13 +724,10 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    GenomeInfoDbData       1.2.14     2025-04-21 [2] Bioconductor
 #>    GenomicAlignments      1.44.0     2025-04-15 [2] Bioconduc~
 #>    GenomicRanges          1.60.0     2025-04-15 [2] Bioconduc~
-#>    gert                   2.1.5      2025-03-25 [2] CRAN (R 4.5.1)
 #>    ggplot2                3.5.2      2025-04-09 [2] CRAN (R 4.5.0)
 #>    ggpubr                 0.6.1      2025-06-27 [2] CRAN (R 4.5.1)
 #>    ggrepel                0.9.6      2024-09-07 [2] CRAN (R 4.5.1)
 #>    ggsignif               0.6.4      2022-10-13 [2] CRAN (R 4.5.0)
-#>    gh                     1.5.0      2025-05-26 [2] CRAN (R 4.5.0)
-#>    gitcreds               0.1.2      2022-09-08 [2] CRAN (R 4.5.0)
 #>    glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
 #>    gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
 #>    gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
@@ -625,7 +737,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
 #>    httpuv                 1.6.16     2025-04-16 [2] CRAN (R 4.5.1)
 #>    httr                   1.4.7      2023-08-15 [2] CRAN (R 4.5.0)
-#>    httr2                  1.2.1      2025-07-22 [2] CRAN (R 4.5.1)
 #>    hunspell               3.0.6      2025-03-22 [2] CRAN (R 4.5.1)
 #>    IRanges                2.42.0     2025-04-15 [2] Bioconduc~
 #>    iterators              1.0.14     2022-02-05 [2] CRAN (R 4.5.0)
@@ -645,7 +756,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
 #>    mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
 #>    miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
-#>    openssl                2.3.3      2025-05-26 [2] CRAN (R 4.5.0)
 #>    pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
 #>    pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
 #>    pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
@@ -663,13 +773,11 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
 #>    purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
 #>    qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
-#>    R.cache                0.17.0     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
 #>    R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
 #>    R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
 #>    ragg                   1.4.0      2025-04-10 [3] CRAN (R 4.5.0)
-#>    rappdirs               0.3.3      2021-01-31 [2] CRAN (R 4.5.0)
 #>    rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
 #>    rcmdcheck              1.4.0      2021-09-27 [3] CRAN (R 4.5.0)
 #>    RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
@@ -701,7 +809,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    spelling               2.3.1      2024-10-04 [2] CRAN (R 4.5.0)
 #>    stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
 #>    stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
-#>    styler                 1.10.3     2024-04-07 [2] CRAN (R 4.5.0)
 #>    sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
 #>    SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
 #>    sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
@@ -718,7 +825,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    usethis              * 3.1.0      2024-11-26 [2] CRAN (R 4.5.0)
 #>    vctrs                  0.6.5      2023-12-01 [2] CRAN (R 4.5.0)
 #>    vroom                  1.6.5      2023-12-05 [2] CRAN (R 4.5.1)
-#>    whisker                0.4.1      2022-12-05 [2] CRAN (R 4.5.0)
 #>    withr                  3.0.2      2024-10-28 [2] CRAN (R 4.5.0)
 #>    xfun                   0.52       2025-04-02 [2] CRAN (R 4.5.0)
 #>    XML                    3.99-0.18  2025-01-01 [2] CRAN (R 4.5.0)
@@ -728,7 +834,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    XVector                0.48.0     2025-04-15 [2] Bioconduc~
 #>    yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc4164c8f551
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548171db3e3e
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
