--- a/vignettes/meta_analysis.Rmd
+++ b/vignettes/meta_analysis.Rmd
@@ -13,7 +13,7 @@ output:
     toc_float: true
     toc_depth: 2
     code_folding: show
-date: "4 August 2025"
+date: "5 August 2025"
 package: "GXwasR 0.99.0"
 vignette: >
   %\VignetteIndexEntry{meta_analysis}
@@ -115,13 +115,13 @@ x <- MetaGWAS(DataDir = DataDir, SummData = SummData, ResultDir = ResultDir, SNP
 #> Processing chromosome
 ```
 
-![plot of chunk unnamed-chunk-5](./unnamed-chunk-5-1.png)![plot of chunk unnamed-chunk-5](./unnamed-chunk-5-2.png)
+![plot of chunk metaGWAS-1](./metaGWAS-1-1.png)![plot of chunk metaGWAS-1](./metaGWAS-1-2.png)![plot of chunk metaGWAS-1](./metaGWAS-1-3.png)
 
 ```
 #> ✔ Forest plot files for Meta_Analysis.plot SNPs have been created.
-#> ℹ You can find them in the directory: /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp0uzDD3
+#> ℹ You can find them in the directory: /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
 #> ✔ Forest plot files for Meta_Analysis.plot SNPs have been created.
-#> ℹ You can find them in the directory: /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp0uzDD3
+#> ℹ You can find them in the directory: /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
 ```
 
 # Random effect result
@@ -255,16 +255,16 @@ Table: Top ten problematic SNPs.
 
 |File                                                                          |SNP        |Problem         |
 |:-----------------------------------------------------------------------------|:----------|:---------------|
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs2803333  |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs672606   |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs7519955  |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs1538466  |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs61777960 |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs2865211  |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs10917217 |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs196402   |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs6662038  |ALLELE_MISMATCH |
-|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/SNPdata_2 |rs3845484  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs2803333  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs672606   |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs7519955  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs1538466  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs61777960 |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs2865211  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs10917217 |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs196402   |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs6662038  |ALLELE_MISMATCH |
+|/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/SNPdata_2 |rs3845484  |ALLELE_MISMATCH |
 
 
 
@@ -273,26 +273,26 @@ Table: Top ten problematic SNPs.
 ## Manhattan Plots and QQ plots:
 
 <div class="figure">
-<img src="Meta_Analysis.plot.jpeg" alt="plot of chunk unnamed-chunk-11" width="1500px" height="500px" />
-<p class="caption">plot of chunk unnamed-chunk-11</p>
+<img src="Meta_Analysis.plot.jpeg" alt="plot of chunk unnamed-chunk-10" width="1500px" height="500px" />
+<p class="caption">plot of chunk unnamed-chunk-10</p>
 </div>
 
 ## All Forest plots
 Now, let's see all the Forest plots.
 
 <div class="figure">
-<img src="Meta_Analysis.forest.plot.1.jpg" alt="plot of chunk unnamed-chunk-12" width="1000px" height="500px" />
+<img src="Meta_Analysis.forest.plot.1.jpg" alt="plot of chunk unnamed-chunk-11" width="1000px" height="500px" />
+<p class="caption">plot of chunk unnamed-chunk-11</p>
+</div>
+
+<div class="figure">
+<img src="Meta_Analysis.forest.plot.2.jpg" alt="plot of chunk unnamed-chunk-12" width="1000px" height="500px" />
 <p class="caption">plot of chunk unnamed-chunk-12</p>
 </div>
 
 <div class="figure">
-<img src="Meta_Analysis.forest.plot.2.jpg" alt="plot of chunk unnamed-chunk-13" width="1000px" height="500px" />
+<img src="Meta_Analysis.forest.plot.3.jpg" alt="plot of chunk unnamed-chunk-13" width="1000px" height="500px" />
 <p class="caption">plot of chunk unnamed-chunk-13</p>
-</div>
-
-<div class="figure">
-<img src="Meta_Analysis.forest.plot.3.jpg" alt="plot of chunk unnamed-chunk-14" width="1000px" height="500px" />
-<p class="caption">plot of chunk unnamed-chunk-14</p>
 </div>
 
 # Reproducibility
@@ -323,14 +323,13 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  collate  en_US.UTF-8
 #>  ctype    en_US.UTF-8
 #>  tz       America/New_York
-#>  date     2025-08-04
+#>  date     2025-08-05
 #>  pandoc   3.6.3 @ /Applications/Positron.app/Contents/Resources/app/quarto/bin/tools/aarch64/ (via rmarkdown)
 #>  quarto   1.7.32 @ /usr/local/bin/quarto
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────
 #>  ! package              * version    date (UTC) lib source
 #>    abind                  1.4-8      2024-09-12 [2] CRAN (R 4.5.0)
-#>    askpass                1.2.1      2024-10-04 [2] CRAN (R 4.5.0)
 #>    backports              1.5.0      2024-05-23 [2] CRAN (R 4.5.1)
 #>    bibtex                 0.5.1      2023-01-26 [2] CRAN (R 4.5.0)
 #>    bigassertr             0.1.7      2025-06-27 [2] CRAN (R 4.5.1)
@@ -344,7 +343,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
 #>    BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
 #>    BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
-#>    biocthis               1.18.0     2025-04-15 [2] Bioconduc~
 #>    Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
 #>    bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
 #>    bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
@@ -362,7 +360,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    commonmark             2.0.0      2025-07-07 [2] CRAN (R 4.5.1)
 #>    cowplot                1.2.0      2025-07-07 [2] CRAN (R 4.5.1)
 #>    crayon                 1.5.3      2024-06-20 [2] CRAN (R 4.5.0)
-#>    credentials            2.0.2      2024-10-04 [2] CRAN (R 4.5.0)
 #>    curl                   6.4.0      2025-06-22 [2] CRAN (R 4.5.1)
 #>    data.table             1.17.8     2025-07-10 [2] CRAN (R 4.5.1)
 #>    DelayedArray           0.34.1     2025-04-17 [2] Bioconduc~
@@ -386,13 +383,10 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    GenomeInfoDbData       1.2.14     2025-04-21 [2] Bioconductor
 #>    GenomicAlignments      1.44.0     2025-04-15 [2] Bioconduc~
 #>    GenomicRanges          1.60.0     2025-04-15 [2] Bioconduc~
-#>    gert                   2.1.5      2025-03-25 [2] CRAN (R 4.5.1)
 #>    ggplot2                3.5.2      2025-04-09 [2] CRAN (R 4.5.0)
 #>    ggpubr                 0.6.1      2025-06-27 [2] CRAN (R 4.5.1)
 #>    ggrepel                0.9.6      2024-09-07 [2] CRAN (R 4.5.1)
 #>    ggsignif               0.6.4      2022-10-13 [2] CRAN (R 4.5.0)
-#>    gh                     1.5.0      2025-05-26 [2] CRAN (R 4.5.0)
-#>    gitcreds               0.1.2      2022-09-08 [2] CRAN (R 4.5.0)
 #>    glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
 #>    gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
 #>    gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
@@ -402,7 +396,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
 #>    httpuv                 1.6.16     2025-04-16 [2] CRAN (R 4.5.1)
 #>    httr                   1.4.7      2023-08-15 [2] CRAN (R 4.5.0)
-#>    httr2                  1.2.1      2025-07-22 [2] CRAN (R 4.5.1)
 #>    hunspell               3.0.6      2025-03-22 [2] CRAN (R 4.5.1)
 #>    IRanges                2.42.0     2025-04-15 [2] Bioconduc~
 #>    iterators              1.0.14     2022-02-05 [2] CRAN (R 4.5.0)
@@ -422,7 +415,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
 #>    mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
 #>    miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
-#>    openssl                2.3.3      2025-05-26 [2] CRAN (R 4.5.0)
 #>    pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
 #>    pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
 #>    pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
@@ -440,13 +432,11 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
 #>    purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
 #>    qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
-#>    R.cache                0.17.0     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
 #>    R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
 #>    R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
 #>    ragg                   1.4.0      2025-04-10 [3] CRAN (R 4.5.0)
-#>    rappdirs               0.3.3      2021-01-31 [2] CRAN (R 4.5.0)
 #>    rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
 #>    rcmdcheck              1.4.0      2021-09-27 [3] CRAN (R 4.5.0)
 #>    RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
@@ -478,7 +468,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    spelling               2.3.1      2024-10-04 [2] CRAN (R 4.5.0)
 #>    stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
 #>    stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
-#>    styler                 1.10.3     2024-04-07 [2] CRAN (R 4.5.0)
 #>    sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
 #>    SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
 #>    sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
@@ -495,7 +484,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    usethis              * 3.1.0      2024-11-26 [2] CRAN (R 4.5.0)
 #>    vctrs                  0.6.5      2023-12-01 [2] CRAN (R 4.5.0)
 #>    vroom                  1.6.5      2023-12-05 [2] CRAN (R 4.5.1)
-#>    whisker                0.4.1      2022-12-05 [2] CRAN (R 4.5.0)
 #>    withr                  3.0.2      2024-10-28 [2] CRAN (R 4.5.0)
 #>    xfun                   0.52       2025-04-02 [2] CRAN (R 4.5.0)
 #>    XML                    3.99-0.18  2025-01-01 [2] CRAN (R 4.5.0)
@@ -505,7 +493,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    XVector                0.48.0     2025-04-15 [2] Bioconduc~
 #>    yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp0uzDD3/temp_libpathfc413d99b05c
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548171db3e3e
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
