--- a/vignettes/preimputationQC.Rmd
+++ b/vignettes/preimputationQC.Rmd
@@ -13,7 +13,7 @@ output:
     toc_float: true
     toc_depth: 2
     code_folding: show
-date: "4 August 2025"
+date: "5 August 2025"
 package: "GXwasR 0.99.0"
 vignette: >
   %\VignetteIndexEntry{preimputationQC}
@@ -69,9 +69,6 @@ These plink files contain genotypes for 276 individuals (males and females) simu
 ## Call some libraries
 library(GXwasR)
 library(printr)
-#> Registered S3 method overwritten by 'printr':
-#>   method                from     
-#>   knit_print.data.frame rmarkdown
 library(rmarkdown)
 ```
 
@@ -216,7 +213,7 @@ ambi_out <- TRUE
 x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = foutput, imiss = imiss,het = het, IBD = NULL, filterSample = filterSample, ambi_out = ambi_out)
 #> ℹ Missingness and heterogygosity thresholds are NULL.
 #> ℹ There will be no sample to be filtered for IBD with 'IBD' threshold.
-#> Warning: cannot open file '/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx/PreimputeEX_QC2.fam': No such file or directory
+#> Warning: cannot open file '/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez/PreimputeEX_QC2.fam': No such file or directory
 ```
 
 ## Step 4: Apply sex check
@@ -236,8 +233,12 @@ SexCheckResult <-SexCheck(DataDir=DataDir,ResultDir = ResultDir, finput=finput,i
 #> ℹ There are no Y chromosomes in the input PLINK files. Estimates will be based solely on the X chromosome.
 problematic_sex <- SexCheckResult[SexCheckResult$STATUS != "OK",]
 problematic_sex <- problematic_sex[,1:2]
-print(paste0("Number of samples with problematic sex assignment: ",nrow(problematic_sex)))
-#> [1] "Number of samples with problematic sex assignment: 4"
+```
+
+Number of samples with problematic sex assignment: 4
+
+
+``` r
 write.table(problematic_sex,file = paste0(DataDir,"/problematic_sex_samples"),quote = F, row.names = F,col.names = F)
 SexCheckResult[1:5,]
 ```
@@ -343,7 +344,7 @@ x <- QCsnp(DataDir = DataDir, ResultDir = ResultDir, finput = finput,foutput = f
 #> • In cases,  1 variant removed due to Hardy-Weinberg exact test.
 #> • In controls,  19 variants removed due to Hardy-Weinberg exact test.
 #> ✔ Merging is done using the common SNPs between the input genotype files.
-#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx prefixed as filtered_temp2
+#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez prefixed as filtered_temp2
 #> ℹ There are no monomorphic SNPs.
 #> ℹ No SNP with differential missingness between cases and controls.
 #> ✔ Output plink files prefixed as ,PreimputeEX_QC3, with passed SNPs are saved in ResultDir.
@@ -403,7 +404,7 @@ x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = 
 #> • Plots are initiated.
 ```
 
-![plot of chunk unnamed-chunk-14](./unnamed-chunk-14-1.png)
+![plot of chunk preimpute-QCSample](./preimpute-QCSample-1.png)
 
 ```
 #> ℹ No. of samples filtered/flagged for missingness: 0
@@ -412,7 +413,7 @@ x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = 
 #> ℹ No. of samples marked to be filtered out for IDB after missingness and heterozygosity filter: 2
 #> ℹ No. of samples in input plink files: 276
 #> ℹ No. of samples in output plink files: 274
-#> ✔ Output plink files, PreimputeEX_QC4 with final samples are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx.
+#> ✔ Output plink files, PreimputeEX_QC4 with final samples are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez.
 ```
 Copying the plink files from ResultDir to DataDir.
 
@@ -499,7 +500,7 @@ x <- AncestryCheck(DataDir = DataDir,
 #> ✔ PCA done.
 ```
 
-![plot of chunk unnamed-chunk-16](./unnamed-chunk-16-1.png)
+![plot of chunk preimpute-AncestryCheck](./preimpute-AncestryCheck-1.png)
 
 ```
 #> ℹ No allele flips between study and reference data.
@@ -569,7 +570,7 @@ x <- QCsnp(DataDir = ResultDir, ResultDir = ResultDir, finput = finput,foutput =
 #> • In cases,  0 variants removed due to Hardy-Weinberg exact test.
 #> • In controls,  0 variants removed due to Hardy-Weinberg exact test.
 #> ✔ Merging is done using the common SNPs between the input genotype files.
-#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx prefixed as filtered_temp2
+#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez prefixed as filtered_temp2
 #> ℹ There are no monomorphic SNPs.
 #> ℹ No SNP with differential missingness between cases and controls.
 #> ✔ Output plink files prefixed as ,Preimpute_Final, with passed SNPs are saved in ResultDir.
@@ -658,171 +659,183 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  collate  en_US.UTF-8
 #>  ctype    en_US.UTF-8
 #>  tz       America/New_York
-#>  date     2025-08-04
+#>  date     2025-08-05
 #>  pandoc   3.6.3 @ /Applications/Positron.app/Contents/Resources/app/quarto/bin/tools/aarch64/ (via rmarkdown)
 #>  quarto   1.7.32 @ /usr/local/bin/quarto
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────
-#>  package              * version    date (UTC) lib source
-#>  abind                  1.4-8      2024-09-12 [2] CRAN (R 4.5.0)
-#>  backports              1.5.0      2024-05-23 [2] CRAN (R 4.5.1)
-#>  bibtex                 0.5.1      2023-01-26 [2] CRAN (R 4.5.0)
-#>  bigassertr             0.1.7      2025-06-27 [2] CRAN (R 4.5.1)
-#>  bigparallelr           0.3.2      2021-10-02 [2] CRAN (R 4.5.0)
-#>  bigsnpr                1.12.18    2024-11-26 [2] CRAN (R 4.5.1)
-#>  bigsparser             0.7.3      2024-09-06 [2] CRAN (R 4.5.1)
-#>  bigstatsr              1.6.2      2025-07-29 [2] CRAN (R 4.5.1)
-#>  Biobase                2.68.0     2025-04-15 [2] Bioconduc~
-#>  BiocGenerics           0.54.0     2025-04-15 [2] Bioconduc~
-#>  BiocIO                 1.18.0     2025-04-15 [2] Bioconduc~
-#>  BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
-#>  BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
-#>  BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
-#>  Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
-#>  bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
-#>  bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
-#>  bitops                 1.0-9      2024-10-03 [2] CRAN (R 4.5.0)
-#>  brio                   1.1.5      2024-04-24 [2] CRAN (R 4.5.1)
-#>  broom                  1.0.9      2025-07-28 [2] CRAN (R 4.5.1)
-#>  BSgenome               1.76.0     2025-04-15 [2] Bioconduc~
-#>  cachem                 1.1.0      2024-05-16 [2] CRAN (R 4.5.0)
-#>  calibrate              1.7.7      2020-06-19 [2] CRAN (R 4.5.0)
-#>  callr                  3.7.6      2024-03-25 [2] CRAN (R 4.5.0)
-#>  car                    3.1-3      2024-09-27 [2] CRAN (R 4.5.0)
-#>  carData                3.0-5      2022-01-06 [2] CRAN (R 4.5.0)
-#>  cli                    3.6.5      2025-04-23 [2] CRAN (R 4.5.0)
-#>  codetools              0.2-20     2024-03-31 [4] CRAN (R 4.5.1)
-#>  cowplot                1.2.0      2025-07-07 [2] CRAN (R 4.5.1)
-#>  crayon                 1.5.3      2024-06-20 [2] CRAN (R 4.5.0)
-#>  curl                   6.4.0      2025-06-22 [2] CRAN (R 4.5.1)
-#>  data.table             1.17.8     2025-07-10 [2] CRAN (R 4.5.1)
-#>  DelayedArray           0.34.1     2025-04-17 [2] Bioconduc~
-#>  desc                   1.4.3      2023-12-10 [2] CRAN (R 4.5.0)
-#>  devtools             * 2.4.5      2022-10-11 [3] CRAN (R 4.5.0)
-#>  digest                 0.6.37     2024-08-19 [2] CRAN (R 4.5.0)
-#>  doParallel             1.0.17     2022-02-07 [2] CRAN (R 4.5.0)
-#>  doRNG                  1.8.6.2    2025-04-02 [2] CRAN (R 4.5.0)
-#>  dplyr                  1.1.4      2023-11-17 [2] CRAN (R 4.5.0)
-#>  ellipsis               0.3.2      2021-04-29 [3] CRAN (R 4.5.0)
-#>  evaluate               1.0.4      2025-06-18 [2] CRAN (R 4.5.1)
-#>  farver                 2.1.2      2024-05-13 [2] CRAN (R 4.5.0)
-#>  fastmap                1.2.0      2024-05-15 [2] CRAN (R 4.5.0)
-#>  flock                  0.7        2016-11-12 [2] CRAN (R 4.5.1)
-#>  foreach                1.5.2      2022-02-02 [2] CRAN (R 4.5.0)
-#>  Formula                1.2-5      2023-02-24 [2] CRAN (R 4.5.0)
-#>  fs                     1.6.6      2025-04-12 [2] CRAN (R 4.5.0)
-#>  gdsfmt                 1.44.1     2025-07-09 [2] Bioconduc~
-#>  generics               0.1.4      2025-05-09 [2] CRAN (R 4.5.0)
-#>  GenomeInfoDb           1.44.1     2025-07-23 [2] Bioconduc~
-#>  GenomeInfoDbData       1.2.14     2025-04-21 [2] Bioconductor
-#>  GenomicAlignments      1.44.0     2025-04-15 [2] Bioconduc~
-#>  GenomicRanges          1.60.0     2025-04-15 [2] Bioconduc~
-#>  ggplot2                3.5.2      2025-04-09 [2] CRAN (R 4.5.0)
-#>  ggpubr                 0.6.1      2025-06-27 [2] CRAN (R 4.5.1)
-#>  ggrepel                0.9.6      2024-09-07 [2] CRAN (R 4.5.1)
-#>  ggsignif               0.6.4      2022-10-13 [2] CRAN (R 4.5.0)
-#>  glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
-#>  gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
-#>  gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
-#>  GXwasR               * 0.99.0     2025-08-04 [1] Bioconductor
-#>  hms                    1.1.3      2023-03-21 [2] CRAN (R 4.5.0)
-#>  htmltools              0.5.8.1    2024-04-04 [2] CRAN (R 4.5.0)
-#>  htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
-#>  httpuv                 1.6.16     2025-04-16 [2] CRAN (R 4.5.1)
-#>  httr                   1.4.7      2023-08-15 [2] CRAN (R 4.5.0)
-#>  IRanges                2.42.0     2025-04-15 [2] Bioconduc~
-#>  iterators              1.0.14     2022-02-05 [2] CRAN (R 4.5.0)
-#>  jsonlite               2.0.0      2025-03-27 [2] CRAN (R 4.5.0)
-#>  knitr                  1.50       2025-03-16 [2] CRAN (R 4.5.0)
-#>  labeling               0.4.3      2023-08-29 [2] CRAN (R 4.5.0)
-#>  later                  1.4.2      2025-04-08 [2] CRAN (R 4.5.1)
-#>  lattice                0.22-7     2025-04-02 [4] CRAN (R 4.5.1)
-#>  lifecycle              1.0.4      2023-11-07 [2] CRAN (R 4.5.0)
-#>  lubridate              1.9.4      2024-12-08 [2] CRAN (R 4.5.1)
-#>  magrittr               2.0.3      2022-03-30 [2] CRAN (R 4.5.0)
-#>  MASS                   7.3-65     2025-02-28 [4] CRAN (R 4.5.1)
-#>  mathjaxr               1.8-0      2025-04-30 [2] CRAN (R 4.5.1)
-#>  Matrix                 1.7-3      2025-03-11 [4] CRAN (R 4.5.1)
-#>  MatrixGenerics         1.20.0     2025-04-15 [2] Bioconduc~
-#>  matrixStats            1.5.0      2025-01-07 [2] CRAN (R 4.5.0)
-#>  memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
-#>  mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
-#>  miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
-#>  pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
-#>  pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
-#>  pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
-#>  pkgdev                 0.1.0.9060 2025-08-04 [2] Github (dieghernan/pkgdev@e56f2a8)
-#>  pkgload                1.4.0      2024-06-28 [2] CRAN (R 4.5.0)
-#>  plyr                   1.8.9      2023-10-02 [2] CRAN (R 4.5.1)
-#>  plyranges              1.28.0     2025-04-15 [2] Bioconduc~
-#>  poolr                  1.2-0      2025-05-07 [2] CRAN (R 4.5.0)
-#>  prettyunits            1.2.0      2023-09-24 [2] CRAN (R 4.5.0)
-#>  printr               * 0.3        2023-03-08 [2] CRAN (R 4.5.0)
-#>  processx               3.8.6      2025-02-21 [2] CRAN (R 4.5.1)
-#>  profvis                0.4.0      2024-09-20 [3] CRAN (R 4.5.0)
-#>  progress               1.2.3      2023-12-06 [2] CRAN (R 4.5.0)
-#>  promises               1.3.3      2025-05-29 [2] CRAN (R 4.5.0)
-#>  ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
-#>  purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
-#>  qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
-#>  R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
-#>  R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
-#>  R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
-#>  R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
-#>  rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
-#>  RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
-#>  Rcpp                   1.1.0      2025-07-02 [2] CRAN (R 4.5.1)
-#>  RCurl                  1.98-1.17  2025-03-22 [2] CRAN (R 4.5.0)
-#>  Rdpack                 2.6.4      2025-04-09 [2] CRAN (R 4.5.0)
-#>  RefManageR           * 1.4.0      2022-09-30 [2] CRAN (R 4.5.1)
-#>  regioneR               1.40.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
-#>  remotes                2.5.0      2024-03-17 [2] CRAN (R 4.5.0)
-#>  restfulr               0.0.16     2025-06-27 [2] CRAN (R 4.5.1)
-#>  rjson                  0.2.23     2024-09-16 [2] CRAN (R 4.5.0)
-#>  rlang                  1.1.6      2025-04-11 [2] CRAN (R 4.5.0)
-#>  rmarkdown            * 2.29       2024-11-04 [2] CRAN (R 4.5.0)
-#>  rmio                   0.4.0      2022-02-17 [2] CRAN (R 4.5.0)
-#>  rngtools               1.5.2      2021-09-20 [2] CRAN (R 4.5.0)
-#>  rprojroot              2.1.0      2025-07-12 [2] CRAN (R 4.5.1)
-#>  Rsamtools              2.24.0     2025-04-15 [2] Bioconduc~
-#>  rstatix                0.7.2      2023-02-01 [2] CRAN (R 4.5.0)
-#>  rtracklayer            1.68.0     2025-04-15 [2] Bioconduc~
-#>  S4Arrays               1.8.1      2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
-#>  S4Vectors              0.46.0     2025-04-15 [2] Bioconduc~
-#>  scales                 1.4.0      2025-04-24 [2] CRAN (R 4.5.0)
-#>  sessioninfo          * 1.2.3      2025-02-05 [2] CRAN (R 4.5.1)
-#>  shiny                  1.11.1     2025-07-03 [2] CRAN (R 4.5.1)
-#>  SNPRelate              1.42.0     2025-04-15 [2] Bioconduc~
-#>  SparseArray            1.8.1      2025-07-23 [2] Bioconduc~
-#>  stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
-#>  stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
-#>  sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
-#>  SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
-#>  sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
-#>  testthat             * 3.2.3      2025-01-13 [2] CRAN (R 4.5.1)
-#>  tibble                 3.3.0      2025-06-08 [2] CRAN (R 4.5.0)
-#>  tidyr                  1.3.1      2024-01-24 [2] CRAN (R 4.5.1)
-#>  tidyselect             1.2.1      2024-03-11 [2] CRAN (R 4.5.0)
-#>  timechange             0.3.0      2024-01-18 [2] CRAN (R 4.5.1)
-#>  tzdb                   0.5.0      2025-03-15 [2] CRAN (R 4.5.1)
-#>  UCSC.utils             1.4.0      2025-04-15 [2] Bioconduc~
-#>  urlchecker             1.0.1      2021-11-30 [3] CRAN (R 4.5.0)
-#>  usethis              * 3.1.0      2024-11-26 [2] CRAN (R 4.5.0)
-#>  vctrs                  0.6.5      2023-12-01 [2] CRAN (R 4.5.0)
-#>  vroom                  1.6.5      2023-12-05 [2] CRAN (R 4.5.1)
-#>  withr                  3.0.2      2024-10-28 [2] CRAN (R 4.5.0)
-#>  xfun                   0.52       2025-04-02 [2] CRAN (R 4.5.0)
-#>  XML                    3.99-0.18  2025-01-01 [2] CRAN (R 4.5.0)
-#>  xml2                   1.3.8      2025-03-14 [2] CRAN (R 4.5.1)
-#>  xtable                 1.8-4      2019-04-21 [2] CRAN (R 4.5.0)
-#>  XVector                0.48.0     2025-04-15 [2] Bioconduc~
-#>  yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
+#>  ! package              * version    date (UTC) lib source
+#>    abind                  1.4-8      2024-09-12 [2] CRAN (R 4.5.0)
+#>    backports              1.5.0      2024-05-23 [2] CRAN (R 4.5.1)
+#>    bibtex                 0.5.1      2023-01-26 [2] CRAN (R 4.5.0)
+#>    bigassertr             0.1.7      2025-06-27 [2] CRAN (R 4.5.1)
+#>    bigparallelr           0.3.2      2021-10-02 [2] CRAN (R 4.5.0)
+#>    bigsnpr                1.12.18    2024-11-26 [2] CRAN (R 4.5.1)
+#>    bigsparser             0.7.3      2024-09-06 [2] CRAN (R 4.5.1)
+#>    bigstatsr              1.6.2      2025-07-29 [2] CRAN (R 4.5.1)
+#>    Biobase                2.68.0     2025-04-15 [2] Bioconduc~
+#>    BiocGenerics           0.54.0     2025-04-15 [2] Bioconduc~
+#>    BiocIO                 1.18.0     2025-04-15 [2] Bioconduc~
+#>    BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
+#>    BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>    BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
+#>    Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
+#>    bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
+#>    bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
+#>    bitops                 1.0-9      2024-10-03 [2] CRAN (R 4.5.0)
+#>    brio                   1.1.5      2024-04-24 [2] CRAN (R 4.5.1)
+#>    broom                  1.0.9      2025-07-28 [2] CRAN (R 4.5.1)
+#>    BSgenome               1.76.0     2025-04-15 [2] Bioconduc~
+#>    cachem                 1.1.0      2024-05-16 [2] CRAN (R 4.5.0)
+#>    calibrate              1.7.7      2020-06-19 [2] CRAN (R 4.5.0)
+#>    callr                  3.7.6      2024-03-25 [2] CRAN (R 4.5.0)
+#>    car                    3.1-3      2024-09-27 [2] CRAN (R 4.5.0)
+#>    carData                3.0-5      2022-01-06 [2] CRAN (R 4.5.0)
+#>    cli                    3.6.5      2025-04-23 [2] CRAN (R 4.5.0)
+#>    codetools              0.2-20     2024-03-31 [4] CRAN (R 4.5.1)
+#>    commonmark             2.0.0      2025-07-07 [2] CRAN (R 4.5.1)
+#>    cowplot                1.2.0      2025-07-07 [2] CRAN (R 4.5.1)
+#>    crayon                 1.5.3      2024-06-20 [2] CRAN (R 4.5.0)
+#>    curl                   6.4.0      2025-06-22 [2] CRAN (R 4.5.1)
+#>    data.table             1.17.8     2025-07-10 [2] CRAN (R 4.5.1)
+#>    DelayedArray           0.34.1     2025-04-17 [2] Bioconduc~
+#>    desc                   1.4.3      2023-12-10 [2] CRAN (R 4.5.0)
+#>    devtools             * 2.4.5      2022-10-11 [3] CRAN (R 4.5.0)
+#>    digest                 0.6.37     2024-08-19 [2] CRAN (R 4.5.0)
+#>    doParallel             1.0.17     2022-02-07 [2] CRAN (R 4.5.0)
+#>    doRNG                  1.8.6.2    2025-04-02 [2] CRAN (R 4.5.0)
+#>    dplyr                  1.1.4      2023-11-17 [2] CRAN (R 4.5.0)
+#>    ellipsis               0.3.2      2021-04-29 [3] CRAN (R 4.5.0)
+#>    evaluate               1.0.4      2025-06-18 [2] CRAN (R 4.5.1)
+#>    farver                 2.1.2      2024-05-13 [2] CRAN (R 4.5.0)
+#>    fastmap                1.2.0      2024-05-15 [2] CRAN (R 4.5.0)
+#>    flock                  0.7        2016-11-12 [2] CRAN (R 4.5.1)
+#>    foreach                1.5.2      2022-02-02 [2] CRAN (R 4.5.0)
+#>    Formula                1.2-5      2023-02-24 [2] CRAN (R 4.5.0)
+#>    fs                     1.6.6      2025-04-12 [2] CRAN (R 4.5.0)
+#>    gdsfmt                 1.44.1     2025-07-09 [2] Bioconduc~
+#>    generics               0.1.4      2025-05-09 [2] CRAN (R 4.5.0)
+#>    GenomeInfoDb           1.44.1     2025-07-23 [2] Bioconduc~
+#>    GenomeInfoDbData       1.2.14     2025-04-21 [2] Bioconductor
+#>    GenomicAlignments      1.44.0     2025-04-15 [2] Bioconduc~
+#>    GenomicRanges          1.60.0     2025-04-15 [2] Bioconduc~
+#>    ggplot2                3.5.2      2025-04-09 [2] CRAN (R 4.5.0)
+#>    ggpubr                 0.6.1      2025-06-27 [2] CRAN (R 4.5.1)
+#>    ggrepel                0.9.6      2024-09-07 [2] CRAN (R 4.5.1)
+#>    ggsignif               0.6.4      2022-10-13 [2] CRAN (R 4.5.0)
+#>    glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
+#>    gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
+#>    gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
+#>  P GXwasR               * 0.99.0     2025-08-05 [?] Bioconductor
+#>    hms                    1.1.3      2023-03-21 [2] CRAN (R 4.5.0)
+#>    htmltools              0.5.8.1    2024-04-04 [2] CRAN (R 4.5.0)
+#>    htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
+#>    httpuv                 1.6.16     2025-04-16 [2] CRAN (R 4.5.1)
+#>    httr                   1.4.7      2023-08-15 [2] CRAN (R 4.5.0)
+#>    hunspell               3.0.6      2025-03-22 [2] CRAN (R 4.5.1)
+#>    IRanges                2.42.0     2025-04-15 [2] Bioconduc~
+#>    iterators              1.0.14     2022-02-05 [2] CRAN (R 4.5.0)
+#>    jsonlite               2.0.0      2025-03-27 [2] CRAN (R 4.5.0)
+#>    knitr                  1.50       2025-03-16 [2] CRAN (R 4.5.0)
+#>    labeling               0.4.3      2023-08-29 [2] CRAN (R 4.5.0)
+#>    later                  1.4.2      2025-04-08 [2] CRAN (R 4.5.1)
+#>    lattice                0.22-7     2025-04-02 [4] CRAN (R 4.5.1)
+#>    lifecycle              1.0.4      2023-11-07 [2] CRAN (R 4.5.0)
+#>    lubridate              1.9.4      2024-12-08 [2] CRAN (R 4.5.1)
+#>    magrittr               2.0.3      2022-03-30 [2] CRAN (R 4.5.0)
+#>    MASS                   7.3-65     2025-02-28 [4] CRAN (R 4.5.1)
+#>    mathjaxr               1.8-0      2025-04-30 [2] CRAN (R 4.5.1)
+#>    Matrix                 1.7-3      2025-03-11 [4] CRAN (R 4.5.1)
+#>    MatrixGenerics         1.20.0     2025-04-15 [2] Bioconduc~
+#>    matrixStats            1.5.0      2025-01-07 [2] CRAN (R 4.5.0)
+#>    memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
+#>    mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
+#>    miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
+#>    pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
+#>    pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
+#>    pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
+#>    pkgdev                 0.1.0.9060 2025-08-04 [2] Github (dieghernan/pkgdev@e56f2a8)
+#>    pkgload                1.4.0      2024-06-28 [2] CRAN (R 4.5.0)
+#>    plyr                   1.8.9      2023-10-02 [2] CRAN (R 4.5.1)
+#>    plyranges              1.28.0     2025-04-15 [2] Bioconduc~
+#>    poolr                  1.2-0      2025-05-07 [2] CRAN (R 4.5.0)
+#>    prettyunits            1.2.0      2023-09-24 [2] CRAN (R 4.5.0)
+#>    printr               * 0.3        2023-03-08 [2] CRAN (R 4.5.0)
+#>    processx               3.8.6      2025-02-21 [2] CRAN (R 4.5.1)
+#>    profvis                0.4.0      2024-09-20 [3] CRAN (R 4.5.0)
+#>    progress               1.2.3      2023-12-06 [2] CRAN (R 4.5.0)
+#>    promises               1.3.3      2025-05-29 [2] CRAN (R 4.5.0)
+#>    ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
+#>    purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
+#>    qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
+#>    R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
+#>    R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
+#>    R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
+#>    R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
+#>    ragg                   1.4.0      2025-04-10 [3] CRAN (R 4.5.0)
+#>    rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
+#>    rcmdcheck              1.4.0      2021-09-27 [3] CRAN (R 4.5.0)
+#>    RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
+#>    Rcpp                   1.1.0      2025-07-02 [2] CRAN (R 4.5.1)
+#>    RCurl                  1.98-1.17  2025-03-22 [2] CRAN (R 4.5.0)
+#>    Rdpack                 2.6.4      2025-04-09 [2] CRAN (R 4.5.0)
+#>    RefManageR           * 1.4.0      2022-09-30 [2] CRAN (R 4.5.1)
+#>    regioneR               1.40.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>    remotes                2.5.0      2024-03-17 [2] CRAN (R 4.5.0)
+#>    restfulr               0.0.16     2025-06-27 [2] CRAN (R 4.5.1)
+#>    rjson                  0.2.23     2024-09-16 [2] CRAN (R 4.5.0)
+#>    rlang                  1.1.6      2025-04-11 [2] CRAN (R 4.5.0)
+#>    rmarkdown            * 2.29       2024-11-04 [2] CRAN (R 4.5.0)
+#>    rmio                   0.4.0      2022-02-17 [2] CRAN (R 4.5.0)
+#>    rngtools               1.5.2      2021-09-20 [2] CRAN (R 4.5.0)
+#>    roxygen2               7.3.2      2024-06-28 [2] CRAN (R 4.5.0)
+#>    rprojroot              2.1.0      2025-07-12 [2] CRAN (R 4.5.1)
+#>    Rsamtools              2.24.0     2025-04-15 [2] Bioconduc~
+#>    rstatix                0.7.2      2023-02-01 [2] CRAN (R 4.5.0)
+#>    rstudioapi             0.17.1     2024-10-22 [2] CRAN (R 4.5.0)
+#>    rtracklayer            1.68.0     2025-04-15 [2] Bioconduc~
+#>    S4Arrays               1.8.1      2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>    S4Vectors              0.46.0     2025-04-15 [2] Bioconduc~
+#>    scales                 1.4.0      2025-04-24 [2] CRAN (R 4.5.0)
+#>    sessioninfo          * 1.2.3      2025-02-05 [2] CRAN (R 4.5.1)
+#>    shiny                  1.11.1     2025-07-03 [2] CRAN (R 4.5.1)
+#>    SNPRelate              1.42.0     2025-04-15 [2] Bioconduc~
+#>    SparseArray            1.8.1      2025-07-23 [2] Bioconduc~
+#>    spelling               2.3.1      2024-10-04 [2] CRAN (R 4.5.0)
+#>    stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
+#>    stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
+#>    sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
+#>    SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
+#>    sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
+#>    systemfonts            1.2.3      2025-04-30 [2] CRAN (R 4.5.0)
+#>    testthat             * 3.2.3      2025-01-13 [2] CRAN (R 4.5.1)
+#>    textshaping            1.0.1      2025-05-01 [3] CRAN (R 4.5.0)
+#>    tibble                 3.3.0      2025-06-08 [2] CRAN (R 4.5.0)
+#>    tidyr                  1.3.1      2024-01-24 [2] CRAN (R 4.5.1)
+#>    tidyselect             1.2.1      2024-03-11 [2] CRAN (R 4.5.0)
+#>    timechange             0.3.0      2024-01-18 [2] CRAN (R 4.5.1)
+#>    tzdb                   0.5.0      2025-03-15 [2] CRAN (R 4.5.1)
+#>    UCSC.utils             1.4.0      2025-04-15 [2] Bioconduc~
+#>    urlchecker             1.0.1      2021-11-30 [3] CRAN (R 4.5.0)
+#>    usethis              * 3.1.0      2024-11-26 [2] CRAN (R 4.5.0)
+#>    vctrs                  0.6.5      2023-12-01 [2] CRAN (R 4.5.0)
+#>    vroom                  1.6.5      2023-12-05 [2] CRAN (R 4.5.1)
+#>    withr                  3.0.2      2024-10-28 [2] CRAN (R 4.5.0)
+#>    xfun                   0.52       2025-04-02 [2] CRAN (R 4.5.0)
+#>    XML                    3.99-0.18  2025-01-01 [2] CRAN (R 4.5.0)
+#>    xml2                   1.3.8      2025-03-14 [2] CRAN (R 4.5.1)
+#>    xopen                  1.0.1      2024-04-25 [3] CRAN (R 4.5.0)
+#>    xtable                 1.8-4      2019-04-21 [2] CRAN (R 4.5.0)
+#>    XVector                0.48.0     2025-04-15 [2] Bioconduc~
+#>    yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpaS06fx/temp_libpatha11a3f7752b0
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548171db3e3e
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
+#> 
 #>  * ── Packages attached to the search path.
+#>  P ── Loaded and on-disk path mismatch.
 #> 
 #> ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ```
